# voice-ai-twitter-spaces

./: .gitignore  LICENSE  README.md  WINDOWS_SETUP_GUIDE.txt  app.spec  config.json  env.example  llm.txt  pyproject.toml
src/convo_backend/: app.py  config.py
src/convo_backend/assets/: choose_space_prompt.txt  default_prompt.txt  filler_prompt.txt
src/convo_backend/core/: core.py  memory.py
src/convo_backend/gui/: gui.py
src/convo_backend/models/: memory.py
src/convo_backend/services/: chat.py  classifier.py  dex_api.py  messages_cache.py  transcription.py  tts.py  x_api.py  x_roaming.py
src/convo_backend/services_dev/: chat.py  transcription.py  tts.py
src/convo_backend/utils/: audio.py  latency.py  logging.py  patch_urllib3_poolsize.py
